fixing the navbar on mobile screen

--- a/src/output.css
+++ b/src/output.css
@@ -554,16 +554,12 @@ video {
   display: none;
 }
 
-.h-\[111vh\] {
+.h-111 {
   height: 111vh;
 }
 
 .h-9 {
   height: 2.25rem;
-}
-
-.h-111 {
-  height: 111vh;
 }
 
 .w-6 {
@@ -695,11 +691,6 @@ video {
   padding: 0.75rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -730,8 +721,17 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.text-\[0\.75rem\] {
+  font-size: 0.75rem;
 }
 
 .text-8 {
@@ -744,6 +744,10 @@ video {
 
 .text-9 {
   font-size: 0.9375rem;
+}
+
+.text-7 {
+  font-size: 0.75rem;
 }
 
 .font-normal {
@@ -828,10 +832,6 @@ video {
     display: none;
   }
 
-  .md\:h-\[108vh\] {
-    height: 108vh;
-  }
-
   .md\:h-108 {
     height: 108vh;
   }
@@ -861,10 +861,6 @@ video {
 
   .lg\:hidden {
     display: none;
-  }
-
-  .lg\:h-\[100vh\] {
-    height: 100vh;
   }
 
   .lg\:h-100 {
